--- a/GestioneViste/GestioneViste/Base.lproj/Main.storyboard
+++ b/GestioneViste/GestioneViste/Base.lproj/Main.storyboard
@@ -51,6 +51,15 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZMo-0A-6an">
+                                <rect key="frame" x="121" y="107" width="78" height="30"/>
+                                <state key="normal" title="&lt;-- Indietro">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="Indietro" destination="JPo-d8-ifG" eventType="touchUpInside" id="YP4-Du-sOa"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
