--- a/stepbystep/stepbystep/Base.lproj/Main.storyboard
+++ b/stepbystep/stepbystep/Base.lproj/Main.storyboard
@@ -220,6 +220,9 @@
                                 <state key="normal" title="Calcola">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="calcola:" destination="bog-jf-Bwe" eventType="touchUpInside" id="hnl-fJ-UTh"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TOTALE:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bo1-9v-6t1">
                                 <rect key="frame" x="16" y="273" width="288" height="21"/>
@@ -241,6 +244,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="campodue" destination="cw8-16-Ira" id="Xsq-yR-JqR"/>
+                        <outlet property="campouno" destination="TED-6e-SQe" id="a0S-ml-Hm2"/>
+                        <outlet property="totale" destination="Bo1-9v-6t1" id="AJI-gh-9bU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n3B-NO-aAG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
